<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flight On Track</string>
    <string name="app_label">flightontrack.com</string>
    <string name="build_label">FONT</string>
    <!--<string name="app_ver">1.71u</string>-->

    <string name="action_settings">Settings</string>
    <string name="action_email">Report Problem</string>
    <string name="action_help">Readme</string>
    <string name="action_aircraft">Aircraft</string>
    <string name="action_logbook">LogBook</string>
    <string name="action_facebook">Share on FB</string>
    <string name="action_privpolicy">Privacy Policy</string>

    <!--activityTitle-->
    <string name="activity_aircraft_title">Aircraft</string>
    <string name="activity_logbook_title">My Pilot LogBook</string>

    <!--url-->
    <string name="app_webserver">flightontrack.com</string>
    <string name="app_webserver_azure">flightontrack.azurewebsites.net</string>
    <string name="email_support">support@flightontrack.com</string>
    <string name="email_crash">support@flightontrack.com</string>
    <string name="aspx_rootpage">/Router.aspx</string>
    <string name="webapi_controller">/api/router/</string>
    <string name="aspx_requestpage">/OffFlightRequest.aspx</string>
    <string name="aspx_communication">/Communication.aspx</string>

    <!--hints-->
    <string name="default_acft_N"></string>
    <string name="default_acft_Make"></string>
    <string name="default_acft_Model"></string>
    <string name="default_acft_Series"></string>
    <string name="hint_yourpass">no password</string>
    <string name="default_tracking_speed">40</string>

    <!--defaults-->

    <!--button-->
    <string name="tracking_is_off">\nStopped</string>
    <string name="tracking_holdon">\nHold on</string>
    <string name="tracking_gettingflight">Requesting Flight</string>
    <string name="tracking_flight_time">\nFlt Time:</string>
    <string name="time">\nTime:</string>
    <!--<string name="tracking_is_on">\nOn Track</string>-->
    <string name="tracking_ready_to_takeoff">\nCleared for Takeoff</string>
    <string name="tracking_stopping">\nStopping</string>


    <!--<string name="user_name">User_name</string>-->
    <!--labels Settings-->
    <string name="label_trackingurl">Cloud URL:</string>
    <string name="label_sendtextto">Text To:</string>
    <string name="label_website">Site:</string>
    <string name="label_website_user">User ID:</string>
    <string name="label_website_psw">User Psw:</string>
    <string name="label_reset">Reset to Defaults</string>
    <string name="label_cache">Cache</string>
    <string name="label_cachedpoints">Points Cached</string>
    <string name="label_clear_cache">Clear Location Cache</string>
    <string name="label_send_cache">Send Location Cache</string>
    <string name="label_btnreset">Reset</string>
    <string name="label_btnclear">Clear</string>
    <string name="label_btnsend">Send</string>
    <string name="label_btnpsw_show">Show Psw</string>
    <string name="label_btnpsw_get">Get Psw</string>
    <string name="label_btnpsw_hide">Hide Psw</string>
    <string name="label_chbox_logfile">Debug Log File</string>
    <string name="label_chbox_boot">Start on Reboot</string>
    <string name="label_chbox_road">Is Road</string>
    <string name="label_build">Build:</string>


    <!--labels MainActivity-->
    <string name="label_pilotphone">Pilot</string>
    <string name="label_aircrafttag">Aircraft</string>
    <string name="label_interval">Update Freq</string>
    <string name="label_minspeedMPH">Min Speed mph</string>
    <string name="label_minspeed">Min Speed</string>
    <string name="label_interval_small">Freq:</string>
    <string name="label_pattern">Multileg</string>
    <string name="label_flightid">Flight ID:</string>
    <string name="label_btnsave">Save Settings</string>

    <string name="instructions1">Scan aircraft NFC tag</string>
    <string name="instructions2">Update fields manually or turn the NFC switch on to scan tag</string>

    <!--messages-->
    <string name="alarm_has_now_started">Connected to cloud successfully</string>
    <string name="tracking_has_now_stopped">Tracking has now stopped</string>
    <string name="user_needs_to_restart_tracking">Please restart tracking to change the time interval</string>
    <string name="user_needs_to_restart_app">Please restart the application</string>
    <string name="reachability_error">Failed to reach the cloud</string>
    <string name="cloud_error">Cloud server error</string>
    <string name="temp_flight_alloc">Failed to reach the cloud \nTemp flight number is assigned</string>
    <string name="max_number_reached">You reached maximum allowed number of waypoints</string>
    <string name="flight_has_ended">The flight has ended</string>
    <string name="flight_uknown_req">Unknown request\nThe flight has ende.</string>
    <string name="flight_db_error">Database error</string>
    <string name="toast_server_error">Server communication error</string>
    <string name="new_flight_id">You got a new flight id</string>
    <string name="start_flight">"Start Flight"</string>
    <string name="flight_notstarted">"Flight \nNot started"</string>
    <string name="crash_toast_text">Oops ! FlightOnTrack crashed! \nSending report to flightontrack.com</string>
    <string name="email_commment">Please add your comments here:</string>
    <string name="email_notinstalled">There is no email client installed.</string>
    <string name="start_flight_first">Flight needs to be started first</string>
    <string name="driving">Looks like you are driving on road\nThe flight has been terminated</string>
    <string name="toast_permiss_declined_1">The app cannot run without this permission</string>
    <string name="toast_permiss_declined_2">The app cannot run in debug mode without this permission</string>
    <string name="toast_noconnectivity">Network connectivity unavailable</string>
    <string name="toast_cachesending"> Sending location points left in cache</string>
    <string name="progressbar_load_logbook">Loading Pilot LogBook from Cloud ...</string>
    <string name="progressbar_cachesending"> Sending cache to Cloud ...</string>

    <!--dialog-->
    <string name="acft_dialog">You do not have Aircraft N number populated. Is it OK?</string>
    <string name="acft_dialog_neg">No, go to Aircraft Settings</string>
    <string name="acft_dialog_pos">Yes, I will restart the flight</string>

    <string name="unsentrecords_dialog"> location points left in cache. Do you want to send them to cloud now?</string>
    <string name="unsentrecords_dialog_neg">No, just cancel.</string>
    <string name="unsentrecords_dialog_pos">Yes, try it now.</string>
    <string name="unsentrecords_failed">Failed to send location points</string>

    <string name="backpressed_dialog"> Do you want to stop application or keep it running in background?</string>
    <string name="backpressed_dialog_neg">Keep it running</string>
    <string name="backpressed_dialog_pos">Stop it</string>

    <string name="permiss_ask">FONT requires permission to read your phone number to uniquely identify a pilot. No phone calls will be made from your phone despite the next system message. </string>
    <string name="permisslocation_ask">FONT needs permission to read your phone gps location. </string>
    <string name="permiss_grantyes">Grant Permission</string>
    <string name="permiss_grantno">Deny and Close the App</string>

    <!--array-->
    <string-array name="intervalname_array">
        <item>3 sec</item>
        <item>5 sec</item>
        <item>10 sec</item>
        <item>15 sec</item>
        <item>20 sec</item>
        <item>30 sec</item>
        <item>1 min</item>
        <item>2 min</item>
        <item>5 min</item>
    </string-array>
    <string-array name="speed_array">
        <item>40</item>
        <item>20</item>
        <item>10</item>
        <!--<item>1</item>-->
        <item>0</item>
    </string-array>
    <!--<string-array name="url_array">-->
    <!--<item>http://postnget.azurewebsites.net</item>-->
    <!--</string-array>-->

    <string-array name="textto_array">
        <item>9784295693</item>
        <item>5083448930</item>
        <item>5088687885</item>
    </string-array>

    <string-array name="posturl_array">
        <item>postnget.azurewebsites.net</item>
        <item>postnget-test.azurewebsites.net</item>
        <item>192.168.1.10/PostngetWebApi</item>
        <!--<item>http://192.168.1.3/PostngetWebApi/api/router</item>-->
        <item>96.230.122.177/PostngetWebApi</item>
        <item>10.0.2.2/PostngetWebApi</item>
        <!--<item>http://192.168.1.11/postnget</item>-->

    </string-array>

    <string-array name="webserverurl_array">
        <item>flightontrack.azurewebsites.net</item>
        <item>flightontrack-test.azurewebsites.net</item>
        <item>flightontrack-test.azurewebsites.net</item>
        <item>flightontrack-test.azurewebsites.net</item>
        <item>flightontrack-test.azurewebsites.net</item>
    </string-array>
    <string-array name="url_array_release">
        <item>postnget.azurewebsites.net</item>
    </string-array>
    <!--multiline-->
    <string name="multilines">Line1Line1\nLine2Line2</string>

    <!--facebook-->
    <string name="facebook_app_id">1708825939399556</string>
    <string name="fb_cancelled">Cancelled</string>
    <string name="fb_permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="fb_ok">OK</string>
    <string name="fb_hello_user">Hello %1$s!</string>
    <string name="fb_success">Success</string>
    <string name="fb_successfully_posted_post">Post ID: %1$s</string>
    <string name="fb_error">Error</string>
</resources>
