<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/padding_margin6"
    android:layout_marginEnd="@dimen/padding_margin6"
    >
    <!--<include layout="@layout/toolbar_top"/>-->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/padding_margin8"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_top"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ToolbarTheme"
            app:navigationIcon="@drawable/ic_launcher_36"
            app:popupTheme="@style/ToolbarPopupTheme">
        </android.support.v7.widget.Toolbar>

    </LinearLayout>
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_top_layout"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:theme="@style/Cards"
        android:layout_marginBottom="@dimen/padding_margin8"
        >
        <RelativeLayout
            android:id="@+id/cardLayoutId1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            >

            <TextView
                android:id="@+id/textView2"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_height="wrap_content"
                android:layout_width="@dimen/center_line_card_min"
                android:gravity="end"
                android:text="@string/label_pilotphone"
                android:typeface="normal" />

            <TextView
                android:id="@+id/txtUserName"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                style="@style/label_text"
                />


            <TextView
                android:id="@+id/acftLabel"
                android:layout_below="@+id/textView2"
                android:layout_width="@dimen/center_line_card_min"
                android:layout_height="wrap_content"
                android:text="@string/label_aircrafttag"
                android:gravity="end"
                />

            <TextView
                android:id="@+id/txtAcftNum"
                android:layout_below="@+id/textView2"
                android:layout_toEndOf="@+id/acftLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                style="@style/label_text"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/card_view"
        android:layout_marginStart="@dimen/padding_margin20"
        android:layout_marginEnd="@dimen/padding_margin20"
        >

            <RelativeLayout
            android:id="@+id/multilegLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_margin8"
            >
            <TextView
                android:id="@+id/label_multileg"
                style="@style/label_label"
                android:layout_width="@dimen/center_line_min"
                android:layout_height="wrap_content"
                android:gravity="center|end"
                android:text="@string/label_pattern"
                />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/patternCheckBox"
                android:layout_toEndOf="@+id/label_multileg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:scaleX="2"
                android:scaleY="2"
                android:theme="@style/MyCheckbox"
                android:layout_marginStart="@dimen/padding_margin10"
                />
            </RelativeLayout>

        <Button
            android:id="@+id/btnTracking"
            style="@style/track_button_small"
            android:layout_width="match_parent"
            android:layout_below="@id/multilegLayout"
            android:layout_marginBottom="@dimen/padding_margin8"
            android:background="@drawable/bttn_status_red"
            android:elevation="10dp"
            android:onClick="trackingButtonOnClick"
            android:text="@string/tracking_holdon" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnTracking"
                android:orientation="vertical"
                android:theme="@style/BottomArea"

                >
                    <TextView
                        android:id="@+id/text2"
                        android:layout_alignParentTop="true"
                        android:layout_width="@dimen/center_line_min"
                        android:layout_height="wrap_content"
                        android:text="@string/label_interval"
                        android:gravity="end"
                        style="@style/label_label"
                        />

                    <Spinner
                        android:id="@+id/spinnerFreq"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/text2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog"
                        android:theme="@style/AppSpinner"
                        />

                    <TextView
                        android:id="@+id/text3"
                        android:layout_below="@+id/text2"
                        android:layout_height="wrap_content"
                        android:layout_width="@dimen/center_line_min"
                        android:text="@string/label_minspeedMPH"
                        android:gravity="end"
                        style="@style/label_label"
                        />

                    <Spinner
                        android:id="@+id/spinnerMinSpeedId"
                        android:layout_below="@+id/spinnerFreq"
                        android:layout_toEndOf="@+id/text3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog"
                        android:gravity="start"
                        android:theme="@style/AppSpinner"
                        />

                    <View
                        android:id="@+id/divider2"
                        android:layout_below="@+id/text3"
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:background="?android:attr/listDivider"
                        android:layout_marginTop="@dimen/padding_margin4"
                        android:layout_marginBottom="@dimen/padding_margin4"
                        />

                    <TextView
                            android:id="@+id/txtCache"
                            android:layout_below="@+id/divider2"
                            style="@style/label_label"
                            android:layout_width="@dimen/center_line_min"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/label_cachedpoints" />

                    <TextView
                        android:id="@+id/txtCached"
                        android:layout_below="@+id/divider2"
                        android:layout_toEndOf="@+id/txtCache"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        style="@style/label_text"
                        android:layout_marginStart="@dimen/padding_margin15"
                        />

            </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/TagView"
        android:tag= "simple"
        android:visibility="invisible"
        android:layout_width="0dp"
        android:layout_height="0dp"
        />
</RelativeLayout>


